# libwatchduty

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
design_handoff_wildfire_tui/: README.md  Wildfire TUI Improved.dc.html
docs/: CHAOS_CORP_RELEASE.md  DOCKER.md  EXAMPLES.md  LOCATION.md  QUICKSTART.md  THREAT_SCORING.md
docs/screenshots/: README.md
docs/screenshots/ansi/: 24x100-evac.txt  24x100-map.txt  24x100-radio.txt  24x100-updates.txt  40x160-evac.txt  40x160-map.txt  40x160-radio.txt  40x160-updates.txt  60x200-evac.txt  60x200-map.txt  60x200-radio.txt  60x200-updates.txt
examples/: camera_capture.py  fire_bundle.py  list_fires.py  live_watcher.py  nearest_fires.py  radio_feeds.py
scripts/: capture_screenshots.py
src/libwatchduty/: __init__.py  __main__.py  _geo.py  _text.py  _types.py  aircraft.py  cli.py  client.py  colors.py  geo_landmarks.py  images.py  install_mapscii.py  location.py  stills.py  tables.py  threat.py  tui.py
src/libwatchduty/tui/: __init__.py  app.py  chrome.py  derive.py  draw_detail.py  draw_list.py  helpers.py  images_paint.py  input.py  layout.py  mapscii_embed.py  palette.py  state.py  worker.py
tests/: conftest.py  test_client.py  test_helpers.py  test_images.py  test_input_dispatch.py  test_keys.py  test_layout.py  test_state.py  test_tables.py  test_threat.py  test_threat_props.py  test_tui_render.py
